style: fix custom select on dark mode

--- a/admin/customFiles/specialStyle.css
+++ b/admin/customFiles/specialStyle.css
@@ -841,3 +841,8 @@ textarea#roomDescription {
   .container-imageCropper.ready .container-spinner {
     display: none;
   }
+
+/* Fix custom select arrows when dark mode */
+body.dark-mode .custom-select {
+    background: #343a40 url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='white' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") right .75rem center/8px 10px no-repeat
+}
